fix contrast & js loading issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,9 @@ $link-color: #DC1644;
 
 body {
 }
-
+a {
+  color: #3176b9;
+}
 .main-container {
   background-color: #fff;
   padding-top: 1px;
